# magic-pinecone-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  dependencies.py  docker-compose.yml  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 02a827ad21ba_create_users_table.py  298a20ef0169_initial_migration.py  3d4f5e6a7b8c_add_apply_link_to_scholarships.py  65ec978e2611_add_course_embeddings_hnsw_index.py  8d4ef55a141e_enable_vector_extension.py  9695bf891c7e_add_chat_and_documents.py  cf0848b8624d_add_course_details.py  e3d41f3d8a7c_add_course_embeddings_table.py  e865e294048d_add_user_details.py
core/: config.py  security.py
database/: db_connect.py  models.py
internal/: chat_service.py  course_detail_fetcher.py  course_fetcher.py  ncu_portal.py  rag_preprocessor.py  scheduler.py  scholarship_fetcher.py
routers/: auth.py  chat.py  course.py  scholarship.py  test.py
schemas/: chat_schema.py  course_schema.py  scholarship_schema.py
